--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   flutter_embed_unity_2022_3_android: ^1.1.1
   flutter_embed_unity: ^1.2.3
+  flutter_joystick: ^0.2.1
   intl: any
 
 
